# anomaly-detector

./: CMakeLists.txt  MainTrain.cpp  anomaly_detection_util.cpp  anomaly_detection_util.h  testFile1.csv  timeseries.cpp  timeseries.h  trainFile1.csv
src/: AnomalyDetector.h  CLI.cpp  CLI.h  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  MainTrain2.cpp  MainTrain4.cpp  MainTrain5.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
test/: data.csv  expectedOutput.txt  output.txt  testFile.csv  testFile1.csv  trainFile.csv  trainFile1.csv
